# webqual-converter

./: webqual-converter.cabal
src/: .Converter.hs.swp  Bench.hs  Converter.hs  Main.hs
