name:           webqual-converter
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         matteo

executable webqual-converter
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   bytestring >= 0.10.2.0,
                   cryptohash >= 0.9.1,
                   binary >= 0.7.1.0
  ghc-options:     -Wall -O2
  other-modules:   Converter

